fix: update install instructions and correct .NET version

--- a/src/TrelloCli.csproj
+++ b/src/TrelloCli.csproj
@@ -14,7 +14,7 @@
     <!-- Package Info -->
     <PackageId>TrelloCli</PackageId>
     <Version>1.0.0</Version>
-    <Authors>TrelloCli</Authors>
+    <Authors>Aygün Özgür</Authors>
     <Description>CLI tool for Trello with AI-friendly JSON output</Description>
   </PropertyGroup>
 
